--- a/root/task-3/flowbite_html_project/package.json
+++ b/root/task-3/flowbite_html_project/package.json
@@ -11,8 +11,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.7",
-    "flowbite": "^3.1.2",
-    "tailwindcss": "^4.1.7"
+    "flowbite": "^3.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
